--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ section#inicio > article{
     top:35%;
     display:flex;
     flex-direction:column;
-    gap:20px;
+    gap:15px;
 }
 section#inicio > article > h1{
     font-family:"Josefin Sans",sans-serif;
@@ -125,9 +125,113 @@ section#inicio > article > div > button{
 section#inicio > article > div > button:nth-child(2){
     border:none;
 }
+section#inicio > article > div > button:nth-child(2) > img#btn-seta{
+    margin:0px 0px 0px 7px;
+}
 section#inicio > img#moda-mulher{
     position: absolute;
     right:20px;
     bottom:20px;
     scale:1.3;
+}
+section#menu-filtro{
+    display:flex;
+    align-items:center;
+    justify-content:left;
+    width:95%;
+    height:100px;
+}
+section#menu-filtro > nav > ul{
+    display:flex;
+    align-items:center;
+    gap:10px;
+}
+section#menu-filtro  button{
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    width:200px;
+    color:black;
+    padding:9px 6px;
+    font-size:.8rem;
+    border:none;
+    background:none;
+}
+section#menu-filtro > nav > ul > li   #btn-recentes{
+    background:black;
+    color:white;
+    border-radius:5px;
+}
+section#menu-filtro  button > img{
+    scale:.7;
+}
+section#filtros-moda{
+    display:flex;
+    align-items:center;
+    width:95%;
+    height:100px;
+}
+section#filtros-moda > div{
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    width:100%;
+}
+section#filtros-moda > div > article{
+    position:relative;
+    display:flex;
+    align-items:center;
+}
+section#filtros-moda > div > article > input{
+    border:solid .1px rgba(0, 0, 0, 0.699);
+    background:none;
+    padding:10px 9px;
+    border-radius:20px;
+    width:300px;
+}
+section#filtros-moda > div > article > img{
+    position:relative;
+    scale:.5;
+    right:33px;
+}
+section#filtros-moda > div > strong > p{
+    display:flex;
+    align-items:center;
+    color:rgba(0, 0, 0, 0.527);
+    font-size:.7rem;
+    gap:10px;
+}
+section#filtros-moda > div > strong > p > strong {
+    display:flex;
+    align-items:center;
+    color:black;
+}
+section#filtros-moda > div > strong > p > strong > img{
+    scale:.5rem;
+}
+
+/*responsivo para android*/
+@media(max-width:900px){
+    header#menu{
+        position:fixed;
+        top:0;
+        left:0;
+        width:100%;
+        height:40px;
+        color:white;
+        z-index:1;
+    }
+    header#menu > nav{
+        display:none;
+    }
+    header#menu > article{
+        width:40px;
+        justify-content:space-between;
+    }
+    header#menu > article > button#btn-contato,#carrinho{
+        display:none !important;
+    }
+    section#inicio{
+        width:100%;
+    }
 }
