--- a/style.css
+++ b/style.css
@@ -221,17 +221,66 @@ section#filtros-moda > div > strong > p > strong > img{
         color:white;
         z-index:1;
     }
+    header#menu > #logo{
+        font-size:1rem !important;
+        margin-left:10px;
+    }
+    header#menu > #logo > #logo-destaque{
+        color:black;
+    }
     header#menu > nav{
         display:none;
     }
     header#menu > article{
-        width:40px;
-        justify-content:space-between;
+        width:65px;
+        justify-content:space-around;
+        margin-right:5px;
     }
     header#menu > article > button#btn-contato,#carrinho{
         display:none !important;
     }
+    header#menu > article > img#nav-menu{
+        scale:1.8;
+    }
+    header#menu > article > #pesquisa{
+        scale:1;
+    }
     section#inicio{
         width:100%;
+    }
+    section#inicio::after{
+        position:relative;
+        top:260px;
+        display:block;
+        content:"";
+        width:100%;
+        height:200px;
+        background-image:linear-gradient(transparent,rgba(255, 255, 255, 0.753),white);
+        z-index:1;
+    }
+    section#inicio > article{
+        width:100%;
+        justify-content:center;
+        align-items:center;
+        top:300px;
+        left:0;
+        z-index:2;
+    }
+    section#inicio > article > h1{
+        font-size:.6rem;
+        line-height:38px;
+        font-size:2.6rem;
+        font-weight:bold;
+    }
+    section#inicio > article > p{
+        display:none;
+    }
+    section#inicio > img#moda-mulher{
+        scale:1.1;
+        bottom:-50px;
+    }
+    section#inicio > article > div{
+        width:100%;
+        justify-content:center;
     }
 }
